--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giphy Searh</title>
+    <title>Giphy Search</title>
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+        crossorigin="anonymous"
+        >
 </head>
 <body>
     <h1>Giphy Searh</h1>
+    <form action="#" method="GET" class="col-4 offset-4">
+        <fieldset>
+          <legend>Search for GIF</legend>
+          <div class="mb-3">
+            <label for="gifTextInput" class="form-label">GIF</label>
+            <input type="text" id="gifTextInput" class="form-control" placeholder="Search for GIF">
+          </div>
+          <div class="mb-3">
+            <label for="numOfGifSelect" class="form-label">Number of GIFs</label>
+            <select id="numOfGifSelect" class="form-select">
+              <option value ="10">10</option>
+              <option value ="20">20</option>
+              <option value ="30">30</option>
+              <option value ="40">40</option>
+              <option value ="50">50</option>
+            </select>
+          </div>
+          <div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </fieldset>
+      </form>
+    <script 
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
+        crossorigin="anonymous"
+    ></script>
 </body>
 </html>
