--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
         crossorigin="anonymous"
         >
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
     <h1>Giphy Searh</h1>
