--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
+<!--Meta Data-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,34 +11,76 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
-        crossorigin="anonymous"
-        >
-    <link rel="stylesheet" href="./CSS/style.css">
+        crossorigin="anonymous">
+    <link 
+        rel="stylesheet" 
+        href="./CSS/bootstrap.min.css">
+    <link 
+        rel="stylesheet" 
+        href="./CSS/style.css">
 </head>
+
+
+
+
 <body>
-    <h1>Giphy Searh</h1>
-    <form action="#" method="GET" class="col-4 offset-4">
-        <fieldset>
-          <legend>Search for GIF</legend>
-          <div class="mb-3">
-            <label for="gifTextInput" class="form-label">GIF</label>
-            <input type="text" id="gifTextInput" class="form-control" placeholder="Search for GIF">
-          </div>
-          <div class="mb-3">
-            <label for="numOfGifSelect" class="form-label">Number of GIFs</label>
-            <select id="numOfGifSelect" class="form-select">
-              <option value ="10">10</option>
-              <option value ="20">20</option>
-              <option value ="30">30</option>
-              <option value ="40">40</option>
-              <option value ="50">50</option>
-            </select>
-          </div>
-          <div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
-        </fieldset>
-      </form>
+<!-- Nav Bar-->
+<nav class="navbar navbar-expand-lg navbar-dark charcoal-grey">
+<!--Logo-->
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="./Images/Logo.gif" alt="Logo">
+      </a>
+<!--NavToggler-->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarColor03">
+<!--NavItems-->
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Home
+              <span class="visually-hidden">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+    <!-- Content-->
+    <section>
+      <h1 class="col-10 offset-3 mb-4">Giphy Search</h1>
+      <form action="#" method="GET" class="col-8 offset-2">
+          <fieldset>
+            <div class=" col-6 offset-2 mb-3 inline">
+              <label for="gifTextInput" class="form-label">GIF</label>
+              <input type="text" id="gifTextInput" class="form-control" placeholder="Search for GIF">
+            </div>
+            <div class="mb-3 inline">
+              <label for="numOfGifSelect" class="form-label">Number of GIFs</label>
+              <select id="numOfGifSelect" class="form-select">
+                <option value ="10">10</option>
+                <option value ="20">20</option>
+                <option value ="30">30</option>
+                <option value ="40">40</option>
+                <option value ="50">50</option>
+              </select>
+            </div>
+            <div class="inline">
+              <button type="submit" class="btn btn-main">Submit</button>
+            </div>
+          </fieldset>
+        </form>
+    </section>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
