--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
 <!--Meta Data-->
 <head>
     <meta charset="UTF-8">
@@ -18,18 +16,17 @@
     <link 
         rel="stylesheet" 
         href="./CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
-
-
-
-
 <body>
 <!-- Nav Bar-->
 <nav class="navbar navbar-expand-lg navbar-dark charcoal-grey">
 <!--Logo-->
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="./Images/Logo.gif" alt="Logo">
+      <a class="navbar-brand" href="./index.html">
+        <img src="./Images/Logo.gif" height="50PX" alt="Logo">
       </a>
 <!--NavToggler-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,15 +54,14 @@
     </div>
   </nav>
     <!-- Content-->
-    <section>
-      <h1 class="col-10 offset-3 mb-4">Giphy Search</h1>
-      <form action="#" method="GET" class="col-8 offset-2">
+    <h1>Giphy Search</h1>
+      <form action="#" method="GET">
           <fieldset>
-            <div class=" col-6 offset-2 mb-3 inline">
+            <div class="mb-3 inline small-margin">
               <label for="gifTextInput" class="form-label">GIF</label>
               <input type="text" id="gifTextInput" class="form-control" placeholder="Search for GIF">
             </div>
-            <div class="mb-3 inline">
+            <div class="mb-3 inline small-margin">
               <label for="numOfGifSelect" class="form-label">Number of GIFs</label>
               <select id="numOfGifSelect" class="form-select">
                 <option value ="10">10</option>
@@ -80,7 +76,6 @@
             </div>
           </fieldset>
         </form>
-    </section>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
