--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         href="./CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-- Nav Bar-->
@@ -26,7 +26,7 @@
 <!--Logo-->
     <div class="container-fluid">
       <a class="navbar-brand" href="./index.html">
-        <img src="./Images/Logo.gif" height="50PX" alt="Logo">
+        <img src="./Images/Logo.gif" class="logo" alt="Logo">
       </a>
 <!--NavToggler-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,18 +36,12 @@
 <!--NavItems-->
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Home
+            <a class="nav-link active" href="#">Giphy Search
               <span class="visually-hidden">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="https://cheyennefahr123.github.io/portfolio/" target="_blank">Dev Portfolio</a>
           </li>
         </ul>
       </div>
@@ -59,7 +53,7 @@
           <fieldset>
             <div class="mb-3 inline small-margin">
               <label for="gifTextInput" class="form-label">GIF</label>
-              <input type="text" id="gifTextInput" class="form-control" placeholder="Search for GIF">
+              <input type="text" id="gifTextInput" class="form-control" placeholder="Search for GIF" required>
             </div>
             <div class="mb-3 inline small-margin">
               <label for="numOfGifSelect" class="form-label">Number of GIFs</label>
