--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
             </div>
           </fieldset>
         </form>
+
+        <section class="js-render-images d-flex justify-content-evenly flex-wrap">
+
+        </section>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
