finished some styling and sizing of rendered images for mobile friendly devices

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <!-- Nav Bar-->
-<nav class="navbar navbar-expand-lg navbar-dark charcoal-grey">
+<nav class="navbar navbar-expand-lg navbar-dark charcoal-grey sticky-top">
 <!--Logo-->
     <div class="container-fluid">
       <a class="navbar-brand" href="./index.html">
@@ -51,6 +51,7 @@
     </div>
   </nav>
     <!-- Content-->
+  <section class="banner">
     <h1>Giphy Search</h1>
       <form action="#" method="GET" class="js-giphy-form">
           <fieldset>
@@ -82,9 +83,8 @@
             </div>
           </fieldset>
         </form>
-
-        <section class="js-render-images d-flex justify-content-evenly flex-wrap">
-
+  </section>
+        <section class="js-render-images d-flex justify-content-evenly flex-wrap light">
         </section>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
