--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         rel="stylesheet" 
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link 
         rel="stylesheet" 
         href="./CSS/bootstrap.min.css">
@@ -84,8 +85,35 @@
           </fieldset>
         </form>
   </section>
-        <section class="js-render-images d-flex justify-content-evenly flex-wrap light">
-        </section>
+        <section class="js-render-images d-flex justify-content-evenly flex-wrap light"></section>
+        <footer class="text-center text-white">
+          <!-- Grid container -->
+          <div class="container p-3 pb-0">
+            <!-- Section: Social media -->
+            <section class="mb-2">
+              <!-- Google -->
+              <a class="btn btn-sec m-1" href="mailto:cheyennefahr334@gmail.com" role="button" target="_blank"
+                ><i class="fa fa-google"></i
+              ></a>
+              <!-- Linkedin -->
+              <a class="btn btn-sec btn-outline m-1" href="https://www.linkedin.com/in/cheyenne-fahr" role="button" target="_blank"
+                ><i class="fa fa-linkedin"></i
+              ></a>
+        
+              <!-- Github -->
+              <a class="btn btn-sec m-1" href="https://github.com/cheyennefahr123" role="button" target="_blank"
+                ><i class="fa fa-github"></i
+              ></a>
+            </section>
+            <!-- Section: Social media -->
+          </div>
+          <!-- Grid container -->
+          <!-- Copyright -->
+          <div>
+            © 2024 Copyright:
+          </div> 
+          <!-- Copyright -->
+        </footer>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
