--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <section class="js-render-images d-flex justify-content-evenly flex-wrap light" id="change.color"></section>
         <footer class="text-center text-white">
           <!-- Grid container -->
-          <div class="container p-3 pb-0">
+          <div class="container p-3 pb-0 mb-3">
             <!-- Section: Social media -->
             <section class="mb-2">
               <!-- Google -->
@@ -112,11 +112,13 @@
             <!-- Section: Social media -->
           </div>
           <!-- Grid container -->
-          <!-- Copyright -->
+          <!-- GIPHY ATTRIBUTION -->
           <div>
-            © 2024 Copyright
+            <a href="https://developers.giphy.com/" target="_blank">
+              <img src="./Images/GIPHY_ATTR.png" class="FOOTER-ATTR" alt="Powered by GIPHY logo">
+            </a>
           </div> 
-          <!-- Copyright -->
+          <!-- GIPHY ATTRIBUTION -->
         </footer>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
